[new] edit application added

--- a/css/style.css
+++ b/css/style.css
@@ -9052,3 +9052,8 @@ hr.transparent {
 .bb {
   font-weight: bolder;
   width: 40%; }
+
+@media (max-width: 600px) {
+  .overflowx {
+    width: 100%;
+    overflow-x: scroll; } }
