--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -12,7 +12,7 @@
         </li>-->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                <span class="hidden-md-down">admin</span>
+                <span class="hidden-md-down"><strong>{{userShowName}}</strong></span>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
 
