--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -11,12 +11,12 @@
                                 <div class="input-group mb-3">
                                     <span class="input-group-addon"><i class="icon-user"></i>
                                 </span>
-                                    <input type="text" class="form-control" placeholder="Username" name="username" ng-model="login.username" required>
+                                    <input type="text" class="form-control" placeholder="Username" name="username" ng-model="login.username" required my-enter="doSomething(login)">
                                 </div>
                                 <div class="input-group mb-4">
                                     <span class="input-group-addon"><i class="icon-lock"></i>
                                 </span>
-                                    <input type="password" class="form-control" placeholder="Password" name="password" ng-model="login.password" required>
+                                    <input type="password" class="form-control" placeholder="Password" name="password" ng-model="login.password" required my-enter="doSomething(login)">
                                 </div>
                                 <div class="row">
                                     <div class="col-6">
