--- a/views/pages/agent/agentdraftapp.html
+++ b/views/pages/agent/agentdraftapp.html
@@ -1,30 +1,32 @@
 <div class="animated fadeIn" ng-controller="agentdraftappCtrl">
-    
-    <table datatable="ng" class="row-border hover">
-        <thead>
-            <tr>
-                <th>Options</th>
-                <th>ID</th>
-                <th>NRIC</th>
-                <th>Name</th>
-                <th>Gender</th>
-                <th>Mobile</th>
-                
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="app in appList">
-                <td>
-                    <button ng-click="showApplication(app.id)" class="btn btn-sm btn-primary" type="button"><i class="fa fa-eye"></i></button>
-                </td>
-                <td>{{ app.id }}</td>
-                <td>{{ app.nric }}</td>
-                <td>{{ app.name }}</td>
-                <td>{{ app.gender }}</td>
-                <td>{{ app.contact }}</td>
-            </tr>
-        </tbody>
-    </table>
-    <br/>
-    <br/>
+    <div class="overflowx">
+        <table datatable="ng" class="row-border hover">
+            <thead>
+                <tr>
+                    <th>Options</th>
+                    <th>ID</th>
+                    <th>NRIC</th>
+                    <th>Name</th>
+                    <th>Gender</th>
+                    <th>Mobile</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="app in appList">
+                    <td>
+                        <button ng-click="showApplication(app.id)" class="btn btn-sm btn-primary" type="button"><i class="fa fa-eye"></i></button>                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        <button ng-click="showApplicationEdit(app.id)" class="btn btn-sm btn-primary" type="button"><i class="fa fa-edit"></i></button>
+                    </td>
+                    <td>{{ app.id }}</td>
+                    <td>{{ app.nric }}</td>
+                    <td>{{ app.name }}</td>
+                    <td>{{ app.gender }}</td>
+                    <td>{{ app.contact }}</td>
+                </tr>
+            </tbody>
+        </table>
+        <br/>
+        <br/>
+    </div>
 </div>
