[new] table responsive

--- a/views/pages/admin/agentlist.html
+++ b/views/pages/admin/agentlist.html
@@ -4,8 +4,8 @@
     </div>
     <br/>
     <br/>
-    <div class="overflowx">
-        <table datatable="ng" class="row-border hover">
+    
+        <table datatable="ng" class="row-border hover" dt-options="options">
             <thead>
                 <tr>
                     <!--<th>Options</th>-->
@@ -30,5 +30,5 @@
         </table>
         <br/>
         <br/>
-    </div>
+    
 </div>
