--- a/views/pages/admin/editapplication.html
+++ b/views/pages/admin/editapplication.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn" ng-controller="editapplicationCtrl">
+<div class="animated fadeIn" ng-controller="admineditapplicationCtrl">
     <form name="appForm">
 
         <div class="row" ng-show = " isAmend || isReject ">
