--- a/views/pages/agent/agentdraftapp.html
+++ b/views/pages/agent/agentdraftapp.html
@@ -1,6 +1,6 @@
 <div class="animated fadeIn" ng-controller="agentdraftappCtrl">
-    <div class="overflowx">
-        <table datatable="ng" class="row-border hover">
+    
+        <table datatable="ng" class="row-border hover" dt-options="options">
             <thead>
                 <tr>
                     <th>Options</th>
@@ -28,5 +28,5 @@
         </table>
         <br/>
         <br/>
-    </div>
+    
 </div>
