--- a/views/pages/admin/adminamendapp.html
+++ b/views/pages/admin/adminamendapp.html
@@ -1,6 +1,6 @@
 <div class="animated fadeIn" ng-controller="adminamendappCtrl">
-    <div class="overflowx">
-        <table datatable="ng" class="row-border hover">
+   
+        <table datatable="ng" class="row-border hover"  dt-options="options">
             <thead>
                 <tr>
                     <th>Options</th>
@@ -15,7 +15,8 @@
             <tbody>
                 <tr ng-repeat="app in appList">
                     <td>
-                        <button ng-click="showApplication(app.id)" class="btn btn-sm btn-primary" type="button"><i class="fa fa-eye"></i></button>
+                        <button ng-click="showApplication(app.id)" class="btn btn-sm btn-primary" type="button"><i class="fa fa-eye"></i></button>                        &nbsp;&nbsp;&nbsp;&nbsp;
+                        <button ng-click="showApplicationEdit(app.id)" class="btn btn-sm btn-primary" type="button"><i class="fa fa-edit"></i></button>
                     </td>
                     <td>{{ app.id }}</td>
                     <td>{{ app.nric }}</td>
@@ -27,5 +28,5 @@
         </table>
         <br/>
         <br/>
-    </div>
+   
 </div>
