--- a/views/pages/agent/agentnewapp.html
+++ b/views/pages/agent/agentnewapp.html
@@ -61,10 +61,10 @@
                                 <br/>
                                 <div class="form-group">
                                     <label for="appcontact">Contact <span class="form-label-warning">*</span> </label>
-                                    <input class="form-control" type='number' name='appcontact' ng-model='application.contact' placeholder="Enter Contact number.."
+                                    <input class="form-control" type='text' name='appcontact' ng-pattern="/^[0-9]+$/" ng-model='application.contact' placeholder="Enter Contact number.."
                                         required minlength="8" maxlength="8">
                                     <span class="form-label-warning" ng-show="appForm.appcontact.$touched && appForm.appcontact.$error.required">The contact number is required.</span>
-                                    <span class="form-label-warning" ng-show="appForm.appcontact.$error.maxlength || appForm.appcontact.$error.minlength">The contact number is invalid.</span>
+                                    <span class="form-label-warning" ng-show="appForm.appcontact.$error.maxlength || appForm.appcontact.$error.minlength || appForm.appcontact.$error.pattern">The contact number is invalid.</span>
                                 </div>
                                 <div class="form-group">
                                     <label for="appnok_relationship">Next of Kin (NOK) name and relationship <span class="form-label-warning">*</span> </label>
@@ -104,10 +104,10 @@
 
                                 <div class="form-group">
                                     <label for="appcontact_nok">Contact of NOK <span class="form-label-warning">*</span> </label>
-                                    <input class="form-control" type='number' name='appcontact_nok' ng-model='application.contact_nok' placeholder="Enter Contact of NOK.."
+                                    <input class="form-control" type='text' ng-pattern="/^[0-9]+$/" name='appcontact_nok' ng-model='application.contact_nok' placeholder="Enter Contact of NOK.."
                                         required minlength="8" maxlength="8">
                                     <span class="form-label-warning" ng-show="appForm.appcontact_nok.$touched && appForm.appcontact_nok.$error.required">The contact NOK is required.</span>
-                                    <span class="form-label-warning" ng-show="appForm.appcontact_nok.$error.maxlength || appForm.appcontact_nok.$error.minlength">The contact NOK is invalid.</span>
+                                    <span class="form-label-warning" ng-show="appForm.appcontact_nok.$error.maxlength || appForm.appcontact_nok.$error.minlength || appForm.appcontact_nok.$error.pattern">The contact NOK is invalid.</span>
                                 </div>
                             </div>
                         </div>
@@ -250,8 +250,8 @@
                                 </label>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="appdiagnosisdate">Any of the above is Yes, date of diagnosis</label>
+                                <div class="form-group" ng-show="application.high_cholesterol  =='Yes' || application.diabetes =='Yes' || application.high_blood_pressure=='Yes' || application.preexisting_condition == 'Yes'  ">
+                                    <label for="appdiagnosisdate">Any of the above is Yes, date of diagnosis <span class="form-label-warning">*</span> </label>
                                     <datepicker date-format="yyyy-MM-dd" date-max-limit="{{today}}">
                                         <input ng-model="application.diagnosisdate" type="text" class="form-control" name="appdiagnosisdate" readonly />
                                     </datepicker>
