--- a/views/pages/agent/agentnewapp.html
+++ b/views/pages/agent/agentnewapp.html
@@ -326,7 +326,7 @@
             <br/>
             <br/>
             <button ng-click="submit(application,3)" ng-disabled="appForm.$invalid" type="button" class="btn btn-success"> Draft Application </button>            &nbsp;&nbsp;&nbsp;
-            <button ng-click="submit(application,1)"  type="button" class="btn btn-success"> Submit Application </button>
+            <button ng-click="submit(application,1)" ng-disabled="appForm.$invalid" type="button" class="btn btn-success"> Submit Application </button>
         </center>
     </div>
 
