--- a/views/pages/admin/adminrejectapp.html
+++ b/views/pages/admin/adminrejectapp.html
@@ -9,7 +9,7 @@
                     <th>Name</th>
                     <th>Gender</th>
                     <th>Mobile</th>
-
+                    <th>Created by</th>
                 </tr>
             </thead>
             <tbody>
@@ -22,6 +22,7 @@
                     <td>{{ app.name }}</td>
                     <td>{{ app.gender }}</td>
                     <td>{{ app.contact }}</td>
+                    <td>{{ app.user.name }}</td>
                 </tr>
             </tbody>
         </table>
