--- a/views/pages/editstatusapplication.html
+++ b/views/pages/editstatusapplication.html
@@ -36,6 +36,33 @@
         </center>
     </div>-->
     <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">
+                    <strong>Created By</strong> Details
+                </div>
+                <div class="card-block">
+                    <table border="1" cellpadding="10" cellspacing="10" style="width:100%">
+                        <tr>
+                            <td class="bb">Name </td>
+                            <td>{{application.user.name}}</td>
+                        </tr>
+                        <tr>
+                            <td class="bb">Phone </td>
+                            <td>{{application.user.phone}}</td>
+                        </tr>
+                        <tr>
+                            <td class="bb">Email </td>
+                            <td>{{application.user.email}}</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br/>
+    <br/>
+    <div class="row">
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
