[edit] resend link work

--- a/views/pages/admin/addagent.html
+++ b/views/pages/admin/addagent.html
@@ -5,7 +5,7 @@
                 <strong>Agent</strong> Form
             </div>
             <div class="card-block">
-                <form class="form-horizontal" name="agentForm">
+                <form class="form-horizontal" name="agentForm" autocomplete="off">
 
                     <div class="form-group row">
                         <label class="col-md-3 form-control-label" for="agentname">Agent Name <span class="form-label-warning">*</span> </label>
