--- a/views/pages/agent/agentnewapp.html
+++ b/views/pages/agent/agentnewapp.html
@@ -19,12 +19,12 @@
     <br/>
 
     <div ng-show="showEmailForm">
-        <form name="emailForm">
+        <form name="emailForm" autocomplete="off">
 
             <div class="form-group row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <input class="form-control" type='email' validate-email name='customeremail' ng-model='customeremail' placeholder="Enter Email.."
+                    <input id="customeremail" class="form-control" type='email' validate-email name='customeremail' ng-model='customeremail' placeholder="Enter Email.."
                         required>
                     <span class="form-label-warning" ng-show="emailForm.customeremail.$touched && emailForm.customeremail.$error.required">The email is required.</span>
                     <span class="form-label-warning" ng-show="emailForm.customeremail.$error.email">The email is invalid.</span>
@@ -40,7 +40,7 @@
     <br/>
     <br/>
 
-    <form name="appForm">
+    <form name="appForm" autocomplete="off">
 
 
         <div class="row">
@@ -179,7 +179,7 @@
                             <datepicker date-format="yyyy-MM-dd" date-min-limit="{{yesterday}}">
                                 <input ng-model="application.preffereddate" type="text" class="form-control" name="apppreffereddate" required readonly />
                             </datepicker>
-                            <span class="form-label-warning" ng-show="appForm.apppreffereddate.$touched && appForm.apppreffereddate.$error.required">The DOB is required.</span>
+                            <span class="form-label-warning" ng-show="appForm.apppreffereddate.$touched && appForm.apppreffereddate.$error.required">Preffered date is required.</span>
                         </div>
                         <br/>
                         <br/>
