--- a/views/pages/applicationform.html
+++ b/views/pages/applicationform.html
@@ -166,7 +166,7 @@
                                 <datepicker date-format="yyyy-MM-dd" date-min-limit="{{yesterday}}">
                                     <input ng-model="application.preffereddate" type="text" class="form-control" name="apppreffereddate" required readonly />
                                 </datepicker>
-                                <span class="form-label-warning" ng-show="appForm.apppreffereddate.$touched && appForm.apppreffereddate.$error.required">The DOB is required.</span>
+                                <span class="form-label-warning" ng-show="appForm.apppreffereddate.$touched && appForm.apppreffereddate.$error.required">Preffered date is required.</span>
                             </div>
                             <br/>
                             <br/>
