--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -22,9 +22,9 @@
                                     <div class="col-6">
                                         <button type="button" ng-disabled="loginForm.$invalid" class="btn btn-primary px-5" ng-click="loginFunction(login)">Login</button>
                                     </div>
-                                    <!--<div class="col-6 text-right">
-                                    <button type="button" class="btn btn-link px-0">Forgot password?</button>
-                                </div>-->
+                                    <div class="col-6 text-right">
+                                        <button type="button" class="btn btn-link px-0" ui-sref="appSimple.forgotpassword">Forgot password?</button>
+                                    </div>
                                 </div>
                             </form>
                         </div>
