--- a/views/pages/agent/editapplication.html
+++ b/views/pages/agent/editapplication.html
@@ -1,7 +1,7 @@
 <div class="animated fadeIn" ng-controller="editapplicationCtrl">
     <form name="appForm">
 
-        <div class="row" ng-show = " isAmend || isReject ">
+        <div class="row" ng-show=" isAmend || isReject ">
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
@@ -101,8 +101,8 @@
 
                                 <div class="form-group">
                                     <label for="appcontact_nok">Contact of NOK <span class="form-label-warning">*</span> </label>
-                                    <input class="form-control" type='text' ng-pattern="/^[0-9]+$/" name='appcontact_nok' ng-model='application.contact_nok' placeholder="Enter Contact of NOK.."
-                                        required minlength="8" maxlength="8">
+                                    <input class="form-control" type='text' ng-pattern="/^[0-9]+$/" name='appcontact_nok' ng-model='application.contact_nok'
+                                        placeholder="Enter Contact of NOK.." required minlength="8" maxlength="8">
                                     <span class="form-label-warning" ng-show="appForm.appcontact_nok.$touched && appForm.appcontact_nok.$error.required">The contact NOK is required.</span>
                                     <span class="form-label-warning" ng-show="appForm.appcontact_nok.$error.maxlength || appForm.appcontact_nok.$error.minlength || appForm.appcontact_nok.$error.pattern">The contact NOK is invalid.</span>
                                 </div>
@@ -167,7 +167,7 @@
                             <datepicker date-format="yyyy-MM-dd" date-min-limit="{{yesterday}}">
                                 <input ng-model="application.preffereddate" type="text" class="form-control" name="apppreffereddate" required readonly />
                             </datepicker>
-                            <span class="form-label-warning" ng-show="appForm.apppreffereddate.$touched && appForm.apppreffereddate.$error.required">The DOB is required.</span>
+                            <span class="form-label-warning" ng-show="appForm.apppreffereddate.$touched && appForm.apppreffereddate.$error.required">Preffered date is required.</span>
                         </div>
                         <br/>
                         <br/>
@@ -279,8 +279,8 @@
                                 <div class="form-group row" ng-repeat="item in application.image">
                                     <label class="col-md-3 form-control-label" for="file-input">{{item.type}}<span class="form-label-warning">*</span></label>
                                     <div class="col-md-9">
-                                        <input class="applicationDoc" type="file" id="{{item.type}}" data-dtype="{{item.type}}" data-did="{{item.id}}" data-dpath="{{item.path}}" name="file-input" onchange="angular.element(this).scope().uploadImage(this.files, event)">
-                                        &nbsp;&nbsp;&nbsp;&nbsp;
+                                        <input class="applicationDoc" type="file" id="{{item.type}}" data-dtype="{{item.type}}" data-did="{{item.id}}" data-dpath="{{item.path}}"
+                                            name="file-input" onchange="angular.element(this).scope().uploadImage(this.files, event)">                                        &nbsp;&nbsp;&nbsp;&nbsp;
                                         <button ng-click="getImagebyName(item.path)" type="button" class="btn btn-primary"><i class="fa fa-download"></i>&nbsp; View Document</button>
                                     </div>
                                 </div>
@@ -290,16 +290,64 @@
                 </div>
             </div>
         </div>
-        <br/>
-
-        <div>
-            <center>
-                <button ng-click="submit(application)" ng-disabled="appForm.$invalid" type="button" class="btn btn-success"> Submit Application </button>
-            </center>
-        </div>
-
-        <br/>
-        <br/>
 
     </form>
+    <br/>
+
+    <div>
+        <center>
+            <button ng-show="isResendLink" ng-click="resendApplication()" type="button" class="btn btn-success"> Resend Application Link </button>
+            <br/><br/>
+            <div ng-show="showResendButton">
+                <div class="row">
+                    <div class="col-md-12">
+                        <center>
+                            <button type="button" class="btn btn-success" ng-click="applicationEmail()"> Application share via EMAIL </button>
+                        </center>
+                    </div>
+                </div>
+                <br/>
+                <div class="row" ng-show="isMobile">
+                    <div class="col-md-12">
+                        <center>
+                            <button type="button" class="btn btn-success" ng-click="applicationWhatsapp()"> Application share via WHATSAPP </button>
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div ng-show="showEmailForm">
+                <form name="emailForm" autocomplete="off">
+
+                    <div class="form-group row">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6">
+                            <input id="customeremail" class="form-control" type='email' validate-email name='customeremail' ng-model='customeremail'
+                                placeholder="Enter Email.." required>
+                            <span class="form-label-warning" ng-show="emailForm.customeremail.$touched && emailForm.customeremail.$error.required">The email is required.</span>
+                            <span class="form-label-warning" ng-show="emailForm.customeremail.$error.email">The email is invalid.</span>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-6">
+                            <textarea id="resendReason" name="textarea-input" rows="9" class="form-control" placeholder="Resen Reason.."
+                                style="margin-top: 0px; margin-bottom: 0px; height: 171px;resize:none;"></textarea>
+                        </div>
+                    </div>
+                    <center>
+                        <button ng-disabled="emailForm.$invalid" type="button" ng-click="emailSubmit(customeremail)" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Send Mail</button>
+                    </center>
+
+                </form>
+                <br/><br/>
+            </div>
+
+            <button ng-click="submit(application)" ng-disabled="appForm.$invalid" type="button" class="btn btn-success"> Submit Application </button>
+        </center>
+    </div>
+
+    <br/>
+    <br/>
+
+
 </div>
