[new] add application no in all application area

--- a/views/pages/admin/adminallapp.html
+++ b/views/pages/admin/adminallapp.html
@@ -5,6 +5,7 @@
                 <tr>
                     <th>Options</th>
                     <th>ID</th>
+                    <th>App. No</th>
                     <th>NRIC</th>
                     <th>Name</th>
                     <th>Gender</th>
@@ -19,6 +20,7 @@
                         <button ng-click="showApplication(app.id)" class="btn btn-sm btn-primary" type="button"><i class="fa fa-eye"></i></button>
                     </td>
                     <td>{{ app.id }}</td>
+                    <td>{{ app.application_no }}</td>
                     <td>{{ app.nric }}</td>
                     <td>{{ app.name }}</td>
                     <td>{{ app.gender }}</td>
