--- a/views/pages/singleapplication.html
+++ b/views/pages/singleapplication.html
@@ -33,6 +33,10 @@
                 <div class="card-block">
                     <table border="1" cellpadding="10" cellspacing="10" style="width:100%">
                         <tr>
+                            <td class="bb">Application No </td>
+                            <td>{{application.application_no}}</td>
+                        </tr>
+                        <tr>
                             <td class="bb">Name </td>
                             <td>{{application.name}}</td>
                         </tr>
