--- a/views/pages/admin/editapplication.html
+++ b/views/pages/admin/editapplication.html
@@ -41,6 +41,10 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
+                                    <label>Application No </label>
+                                    <input class="form-control" type='text' ng-model='application.application_no' readonly>
+                                </div>
+                                <div class="form-group">
                                     <label for="appname">Name <span class="form-label-warning">*</span> </label>
                                     <input class="form-control" type='text' name='appname' ng-pattern="/^[a-zA-Z ]+$/" ng-model='application.name' placeholder="Enter Name.."
                                         required>
