--- a/views/pages/agent/editapplication.html
+++ b/views/pages/agent/editapplication.html
@@ -41,6 +41,10 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
+                                    <label>Application No </label>
+                                    <input class="form-control" type='text' ng-model='application.application_no' readonly>
+                                </div>
+                                <div class="form-group">
                                     <label for="appname">Name <span class="form-label-warning">*</span> </label>
                                     <input class="form-control" type='text' name='appname' ng-pattern="/^[a-zA-Z ]+$/" ng-model='application.name' placeholder="Enter Name.."
                                         required>
@@ -330,8 +334,7 @@
                     <div class="form-group row">
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
-                            <textarea id="resendReason" name="textarea-input" rows="9" class="form-control" placeholder="Resen Reason.."
-                                style="margin-top: 0px; margin-bottom: 0px; height: 171px;resize:none;"></textarea>
+                            <textarea id="resendReason" name="textarea-input" rows="9" class="form-control" placeholder="Resen Reason.." style="margin-top: 0px; margin-bottom: 0px; height: 171px;resize:none;"></textarea>
                         </div>
                     </div>
                     <center>
