--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -19,25 +19,16 @@
                                     <input type="password" class="form-control" placeholder="Password" name="password" ng-model="login.password" required my-enter="doSomething(login)">
                                 </div>
                                 <div class="row">
-                                    <div class="col-6">
+                                    <div class="col-md-6 text-center">
                                         <button type="button" ng-disabled="loginForm.$invalid" class="btn btn-primary px-5" ng-click="loginFunction(login)">Login</button>
                                     </div>
-                                    <div class="col-6 text-right">
+                                    <div class="col-md-6 text-center">
                                         <button type="button" class="btn btn-link px-0" ui-sref="appSimple.forgotpassword">Forgot password?</button>
                                     </div>
                                 </div>
                             </form>
                         </div>
                     </div>
-                    <!--<div class="card card-inverse card-primary py-5 d-md-down-none" style="width:44%">
-                        <div class="card-block text-center">
-                            <div>
-                                <h2>Sign up</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
-                            </div>
-                        </div>
-                    </div>-->
                 </div>
             </div>
         </div>
